k8s_manifests/misc/portfolio/manifest.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: portfolio
  name: portfolio
  namespace: portfolio-app
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: portfolio
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: portfolio
  name: portfolio
  namespace: portfolio-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
        - env:
          image: ghcr.io/fahmed24/vcard-personal-portfolio:strenv(TAG)
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 2
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 3
          name: portfolio
          ports:
            - containerPort: 80
          readinessProbe:
            failureThreshold: 2
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 3
          resources:
            limits: null
            requests: null
          startupProbe:
            failureThreshold: 20
            httpGet:
              path: /
              port: 80
            periodSeconds: 10
            timeoutSeconds: 1
