k8s_manifests/misc/portfolio/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations: {}
  name: portfolio
  namespace: portfolio-app
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`fahmed.org`)
      middlewares: null
      services:
        - name: portfolio
          port: 80
  tls:
    secretName: portfolio-tls
